--- a/css/styleDesktop.css
+++ b/css/styleDesktop.css
@@ -1,44 +1,33 @@
 body{
-  background: #f9f9f9;
+  background: #fff;
   font-family: 'Open Sans', sans-serif;
 }
 
 #principal{
-
-  align-content: center;
+  
+   
 }
 
 #menu{
   position: absolute;
-  border: 1px solid red;
+  border: 1px solid red; 
   height: 70px;
-  top: 530px;
-  left: 405px;
-  padding: 20px;
+  top: 490px;
+  left: 650px;
+  padding: 10px;
 }
 
 #conteudo{
-  background-color: #f9f9f9;
-  padding: 20px;  
+  margin-top: 100px;
+  background-color: #f9f9f9; 
+
 }
 
-.centralizar{
+.bloco-titulo{
   text-align: center;
-}
-
-.titulo-central{
-  text-align: center;
-  color: #000;
-  font-size: 15px;
-}
-
-.img-Campanha{
-  border: 10px solid #c3c3ae;
-}
-
-#rodape{
-  background: #0059e1;
-  color: #fff;
+  color: #323232;
+  font-size: 20px;
+  font-weight:bold;
 }
 
 .msg-topo{
@@ -47,7 +36,7 @@ body{
   font-size: 43px;
   color:#fff;
   top: 280px;
-  left: 400px;
+  left: 33%;
   line-height: 0px;  
   font-weight: bold;
 }
@@ -58,7 +47,7 @@ body{
   font-size: 15px;
   color: #fff;
   top: 305px;
-  left: 500px;
+  left: 33%;
   text-align: center;
   font-weight: bold;
 }
@@ -68,12 +57,34 @@ body{
   font-size: 15px;
 }
 
-h1{
-  font-size: 1.2em;
+#rodape{
+  background: #0059e1;
+  color: #fff;
+  height: 220px;
+}
+
+.titulo-rodape{
+  font-size: 14px;
+  text-align: left;
+  padding-top: 50px;
+  margin-left: 200px;
+}
+
+.texto-rodape{
+  font-size: 12px; 
+  text-align: left; 
+  padding-top: 10px;
+  margin-left: 200px;
+}
+
+.logoSCA{
+  position: relative;
+  top: -120px;
+  left: 1600px;
 }
 
 a{
-  color: #4b566a;
+  color: #2c2e31; 
   text-decoration: none;
-  padding: 5px;
+   padding: 5px;
 }
